c13.out
   Compiling rp-pico v0.7.0 (/home/pi/rp-hal-boards/boards/rp-pico)
error[E0412]: cannot find type `RegisterBlock` in this scope
  --> boards/rp-pico/examples/b_blinky.rs:92:21
   |
92 |     rp2040_hal::I2C<RegisterBlock, rp2040_hal::gpio::Pins>, 
   |                     ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
6  | use cortex_m::peripheral::cpuid::RegisterBlock;
   |
6  | use cortex_m::peripheral::dcb::RegisterBlock;
   |
6  | use cortex_m::peripheral::dwt::RegisterBlock;
   |
6  | use cortex_m::peripheral::icb::RegisterBlock;
   |
     and 35 other candidates

warning: unused import: `core::fmt::Write as FmtWrite`
 --> boards/rp-pico/examples/b_blinky.rs:6:5
  |
6 | use core::fmt::Write as FmtWrite;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `rp_pico::entry`
  --> boards/rp-pico/examples/b_blinky.rs:10:5
   |
10 | use rp_pico::entry;
   |     ^^^^^^^^^^^^^^

warning: unused imports: `Operation`, `Read`, `Transactional`, `WriteIter`, `Write`
  --> boards/rp-pico/examples/b_blinky.rs:21:35
   |
21 | use embedded_hal::blocking::i2c::{Operation, Read, Transactional, Write, WriteIter};
   |                                   ^^^^^^^^^  ^^^^  ^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^

warning: unused import: `embedded_hal::digital::v2::OutputPin`
  --> boards/rp-pico/examples/b_blinky.rs:11:5
   |
11 | use embedded_hal::digital::v2::OutputPin;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0412`.
warning: `rp-pico` (example "b_blinky") generated 4 warnings
error: could not compile `rp-pico` due to previous error; 4 warnings emitted
